--- a/public_html/[000_000]index.html
+++ b/public_html/[000_000]index.html
@@ -24,9 +24,12 @@
   <body>
     <!--Header共通設定-->
     <header style="background-color:white">
-         <div class="wrapper_1280">
-        <img src="images/Annyys-msis-logo.jpg" class="img-responsive" alt="ANNYYS_D">
-        </div><!--wrapper_1280-->
+         <div class="wrapper_1180 img_p clearfix">
+        <!--<img src="images/Annyys-msis-logo.jpg" class="img-responsive" alt="ANNYYS_D">-->
+        <img id="A_logo" class="margin-top20" src="images/ANNYYS_logo.jpg" class="img-responsive" alt="ANNYYS_D">
+        <img class="m_logo margin-top30" src="images/msis_logo.jpg" class="img-responsive" alt="msis">
+        </div><!--wrapper_1180-->
+        
         <div class="container-fluid" style="background-color:#19538a">
               <div class="wrapper_1180">
             <div class="row">
@@ -88,10 +91,11 @@
     </header>
     <!--コンテンツ設定-->
    <br>
+   
+   <div class="wrapper_1180 clearfix">
     <div class="container-fluid">
         <div class="row">
-            <div class="col-md-2" style="background-color:white;"></div>
-            <div class="col-md-8" style="background-color:white;">
+            <div class="col-md-12" style="background-color:white;">
                 <!--ページタイトル-->
                 <div class="hr_h3">
                 <h3 class="top_title">ANNYYS_D版　操作マニュアル</h3>
@@ -109,12 +113,13 @@
                 <p>&nbsp;&nbsp;&nbsp;次に「ご自身でカスタマイズ」するという方法です。ANNYYS_D版のベースとなっているFileMakerという製品は、「誰でも簡単に扱える」特徴があるデータベースソフトウェアです。ちょっとした画面レイアウトの変更であれば、誰でもすぐに実行可能です。少し勉強すれば、短時間でプログラマーが作ったようなソリューションを作る事ができます。医療業界においては、特に日本ユーザーメード医療IT研究会（略称 J-SUMMITS: http://www.j-summits.jp/）では多くの医療現場における事例の紹介されており、実に多くの医療関係者の方々が自分のスタイルに合ったシステム構築事例が見つかります。</p>
                 <p>&nbsp;&nbsp;&nbsp;FileMaker 日本法人 (http://www.filemaker.co.jp/) においても、各種セミナーや講習会が全国で行われていますので、勉強・相談できる機会はいつでもあります。ANNYYS_D版事務局では、ITに関する専門的な知識を持たない方でもシステム構築に関するご案内をしています。いつでもお問合せください。</p><br>
                 <p>&nbsp;&nbsp;&nbsp;既にFileMakerに関する深い知識と経験をお持ちの場合は、<strong>「ANNYYS_D版の仕様」</strong>へ足を踏み入れたくなるかもしれません。これにはプロの知識と技術のノウハウが含まれている貴重な資料です。また、ANNYYS_D版をカスタマイズする時や、現在抱えている問題の根本を解決するための具体的な資料としても大いに役立つはずです。一つ上のレベルでANNYYS_D版を管理できれば、それはソリューションの安定や安全性、さらにはソリューションの性能向上をもたらすことになるでしょう</p>
-             </div>
-            </div>
-            <div class="col-md-2" style="background-color:white;"></div>
+             </div><!--annys-tx-->
+            </div><!--col-md-8-->
+           
         </div>
         <!--//コンテンツ部終了//-->
     </div>
+   </div><!--wrapper_1180-->
    <br>
    <br>
     <!--Footer設定-->
