--- a/public_html/[010_000]mokuji.html
+++ b/public_html/[010_000]mokuji.html
@@ -25,8 +25,9 @@
   <body>
     <!--Header共通設定-->
     <header style="background-color:white">
-        <div class="wrapper_1280">
-        <img src="images/Annyys-msis-logo.jpg" class="img-responsive" alt="ANNYYS_D">
+        <div class="wrapper_1180 img_p clearfix">
+        <a href=""><img id="A_logo" class="margin-top20" src="images/ANNYYS_logo.jpg" class="img-responsive" alt="ANNYYS_D"></a>
+        <a href=""><img class="m_logo margin-top30" src="images/msis_logo.jpg" class="img-responsive" alt="msis"></a>
         </div><!--wrapper-->
         <div class="container-fluid" style="background-color:#19538a">
             <div class="wrapper_1180">
@@ -122,14 +123,14 @@
             </div>
             <!--<div class="col-md-2" style="background-color:white;"></div>-->
         </div>
-         </div><!--container-fluid-->
-         </div><!--wrapper_1180-->
+         <!--container-fluid-->
+         <!--wrapper_1180-->
          
-        <div class="title_wrapper">
+        <!--<div class="title_wrapper">
             <div class="wrapper_1180">
               <h3 class="page_title">目次</h3>
               </div><!--weapper1180-->
-              </div><!--title_wrapper-->
+              <!--</div><!--title_wrapper-->
          <div class="container-fluid">
               <div class="wrapper_1180">
         <div class="row margin20pc">
