--- a/public_html/[090_000]master.html
+++ b/public_html/[090_000]master.html
@@ -111,8 +111,8 @@ $(window).scroll(function () {
                                 <li><a href="[070_000]karute.html">　　カルテ記録</a></li>
                                 <li><a href="[080_000]kanja.html">　　患者情報</a></li>
                                 <li><a href="[090_000]master.html">　　マスタ管理</a></li>
-                                <li><a href="[010_000]sekkei.html">　　基本設計</a></li>
-                                <li><a href="[011_000]renkei.html">　　日レセ連携</a></li>
+                                <li><a href="[100_000]settei.html">　　基本設定</a></li>
+                                <li><a href="[110_000]renkei.html">　　日レセ連携</a></li>
                              </ul>
 　　　　　　　　　　　</nav><!--スマホ用トグル終わり-->
            <!--PC用グローバルナビ-->
@@ -128,8 +128,8 @@ $(window).scroll(function () {
                             <li><a href="[070_000]karute.html">カルテ記録</a></li>
                             <li><a href="[080_000]kanja.html">患者情報</a></li>
                             <li><a class="current_page" href="[090_000]master.html">マスタ管理</a></li>
-                            <li><a href="[010_000]sekkei.html">基本設計</a></li>
-                            <li><a href="[011_000]renkei.html">日レセ連携</a></li>
+                            <li><a href="[100_000]settei.html">基本設定</a></li>
+                            <li><a href="[110_000]renkei.html">日レセ連携</a></li>
                         </ul>
                     </div><!--gnav-->
                 </nav>
