--- a/public_html/[090_000]master.html
+++ b/public_html/[090_000]master.html
@@ -193,7 +193,7 @@ $(window).scroll(function () {
                             <div id="annys-tx">
                                 <p><img class="center-block" src="images/090_000_masterkanri.png" alt="マスター管理"></p> 
                                 <p><img class="center-block" src="images/090_000_masterkanri1.png" alt="マスター管理1"></p> 
-                                <p>マスタ管理は各種マスタ情報を調べたり確認したりするためのデザインとなっています。マスタは随時更新されますが更新は別のDBManagerプログラムにおいて更新されます。</p>
+                                <p class="padding-bottom30">マスタ管理は各種マスタ情報を調べたり確認したりするためのデザインとなっています。マスタは随時更新されますが更新は別のDBManagerプログラムにおいて更新されます。</p>
 
                             </div><!--annys-tx-->
                         </div><!--contents_wrapper-->
@@ -332,7 +332,7 @@ $(window).scroll(function () {
                                 <p>データソース：ANNYYS_D/tbl_inputcd(S[メンテナンス]>S[バックアップ],S[リストア]対象データ)</p>
                                 <p><img class="center-block" src="images/090_000_saiyou.png" alt="採用"></p> 
                                 <p><img class="center-block" src="images/090_000_saiyou1.png" alt="採用1"></p> 
-                                <p>各マスタで採用登録を行ったデータです。採用登録したデータはANNYYS_D内のtbl_inputcdに収録されているので他のANNYYS_Dと内容が重複しません。そのため診療科や医師別に利用する項目だけを登録し診療行為入力を簡素化することができます。</p>
+                                <p class="padding-bottom30">各マスタで採用登録を行ったデータです。採用登録したデータはANNYYS_D内のtbl_inputcdに収録されているので他のANNYYS_Dと内容が重複しません。そのため診療科や医師別に利用する項目だけを登録し診療行為入力を簡素化することができます。</p>
 
                             </div><!--annys-tx-->
                         </div><!--contents_wrapper-->
