--- a/public_html/index_1.html
+++ b/public_html/index_1.html
@@ -54,8 +54,8 @@
                                 <li><a href="[070_000]karute.html">　　カルテ記録</a></li>
                                 <li><a href="[080_000]kanja.html">　　患者情報</a></li>
                                 <li><a href="[090_000]master.html">　　マスタ管理</a></li>
-                                <li><a href="[010_000]sekkei.html">　　基本設計</a></li>
-                                <li><a href="[011_000]renkei.html">　　日レセ連携</a></li>
+                                <li><a href="[100_000]settei.html">　　基本設定</a></li>
+                                <li><a href="[110_000]renkei.html">　　日レセ連携</a></li>
                              </ul>
 　　　　　　　　　　　</nav><!--スマホ用トグル終わり-->
                     
@@ -72,7 +72,7 @@
                             <li><a href="002-004.html">カルテ記録</a></li>
                             <li><a href="002-005.html">患者情報</a></li>
                             <li><a href="002-006.html">マスタ管理</a></li>
-                            <li><a href="002-008.html">基本設計</a></li>
+                            <li><a href="002-008.html">基本設定</a></li>
                         </ul>
                     </div>
                 </nav>
