--- a/public_html/[060_000]gamen.html
+++ b/public_html/[060_000]gamen.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>ANNYYS_D Webマニュアル　目次 20160910河野</title>
+    <title>ANNYYS_D Webマニュアル　診察画面 20160910河野</title>
     <!-- BootstrapのCSS読み込み -->
     <link href="css/bootstrap.css" rel="stylesheet">
     <!-- jQuery読み込み -->
