--- a/public_html/[030_000]setup.html
+++ b/public_html/[030_000]setup.html
@@ -101,7 +101,7 @@ $(window).scroll(function () {
                             <span></span>
                             <span></span>
                         </a></span>
-                        <ul class="nav navbar-nav">
+                             <ul class="globNav-inner" style="list-style:none">
                             <li><a href="[000_000]index.html">TOP</a></li>
                             <li><a href="[010_000]mokuji.html">目次</a></li>
                             <li><a href="[020_000]hajimeni.html">はじめに</a></li>
@@ -117,8 +117,8 @@ $(window).scroll(function () {
                         </ul>
 　　　　　　　　　　　</nav><!--スマホ用トグル終わり-->
            <!--PC用グローバルナビ-->
-           <div id="gnavi" class="collapse navbar-collapse">
-               <ul class="nav navbar-nav" role="menu">
+                    <div id="gnavi" class="collapse navbar-collapse">
+                        <ul class="nav navbar-nav">
                             <li><a href="[000_000]index.html">TOP</a></li>
                             <li><a href="[010_000]mokuji.html">目次</a></li>
                             <li><a href="[020_000]hajimeni.html">はじめに</a></li>
