--- a/public_html/[070_000]karute.html
+++ b/public_html/[070_000]karute.html
@@ -408,7 +408,7 @@ $(window).scroll(function () {
                                     <tr><td>【在宅薬】<br>
                                     [620006199]イミグランキット皮下注３ｍｇ　０．５ｍＬ[4筒]<br>
                                     [001000101]医師の指示通りに<br>
-                                    ※「[001000101]医師の指示通りに」は、#T[用法]#B[用法]で選択できます。
+                                    ※「[001000101]医師の指示通りに」は、<strong>T[用法] B[用法]</strong>で選択できます。
                                     </td></tr>
                                 </table><br>
                                 <p class="padding-bottom30">【在宅薬】として入力された項目は処方せんとして発行されます。</p>
@@ -428,7 +428,7 @@ $(window).scroll(function () {
                                     診療行為欄には例として以下のように入力されます</p>
                                     <table border="1">
                                         <tr><td>【在宅材】<br>
-                                        [777770000]（その他の特定器材）
+                                        [739230000]酸素ボンベ・小型[10Ｌ]
                                         </td></tr>
                                     </table>
                                     <p class="padding-bottom30">※用法などが必要な場合ははT[用法]から適宜入力してください。</p>
@@ -453,7 +453,7 @@ $(window).scroll(function () {
                                     <p>目的の薬剤該当画面から薬剤を処方します。<br>
                                         表示されたダイアログで数量を確認します。</p>
                                     <p><img class="" src="images/070_000_shohou3.png" width="410" height="206" alt="処方3"></p>
-                                    <p>次に用法#T[用法]#B[用法]から用法を選択します。<br>
+                                    <p>次に用法<strong>T[用法] B[用法]</strong>から用法を選択します。<br>
                                         ※薬剤に対して用法を選択した場合記憶されていますので２回目からは次の用法確認画面が出てきます。</p>
                                     <p><img class="" src="images/070_000_shohou4.png" width="355" height="489" alt="処方4"></p>
                                     <p>内服・頓服の場合は日数または回数を確認します。</p>
@@ -514,7 +514,7 @@ $(window).scroll(function () {
                                     <table border="1">
                                         <tr><td>【皮下筋注】<br>
                                         [130000510]皮内、皮下及び筋肉内注射<br>
-                                        [620006199]イミグランキット皮下注３ｍｇ　０．５ｍＬ[2筒]
+                                        [621196302]インジゴカルミン注２０ｍｇ「第一三共」　０．４％５ｍＬ[2管]
                                         </td></tr>
                                     </table>
                                     <p class="padding-bottom30">※入力後に数量などの変更がある場合は直接修正してください。</p>
@@ -529,10 +529,10 @@ $(window).scroll(function () {
                             </div>
                         <!--本文-->
                                <div id="annys-tx">
-                                    <p>T[行為] B[注処]</p>
+                                   <p><strong>T[行為] B[注処]</strong></p>
                                     <p><img class="" src="images/070_000_seichu.png" width="355" height="489" alt="静注"></p>
-                                    <p>[130003510]静脈内注射を選択します。<br>
-                                        続けて#T[薬剤]#B[注射]から薬剤を選択します。</p>
+                                    <p><strong>[130003510]静脈内注射</strong>を選択します。<br>
+                                        続けて<strong>T[薬剤] B[注射]</strong>から薬剤を選択します。</p>
                                     <p><img class="" src="images/070_000_seichu2.png" width="355" height="172" alt="静注2"></p>
                                     <p>表示されたダイアログで数量を確認します。</p>
                                     <p><img class="" src="images/070_000_seichu3.png" width="355" height="172" alt="静注3"></p>
@@ -540,7 +540,7 @@ $(window).scroll(function () {
                                     <table border="1">
                                         <tr><td>【静注】<br>
                                         [130003510]静脈内注射<br>
-                                        [620006199]イミグランキット皮下注３ｍｇ　０．５ｍＬ[2筒]
+                                        [621196302]インジゴカルミン注２０ｍｇ「第一三共」　０．４％５ｍＬ[2管]
                                         </td></tr>
                                     </table>
                                     <p class="padding-bottom30">※入力後に数量などの変更がある場合は直接修正してください。</p>
@@ -556,7 +556,7 @@ $(window).scroll(function () {
                                <div id="annys-tx">
                                     <p><strong>T[行為] B[注処]</strong></p>
                                     <p><img class="" src="images/070_000_sonota.png" width="355" height="489" alt="その他"></p>
-                                    <p><strong>点滴注射</strong>による診療行為点数は対象年齢や注射容量によって違うため、これらは概ねレセコン側で自動的に判別されますので手技料は２項あるうちどちらを選択してもコメントとして入力されます。<strong>点滴注射の場合は</strong>ここで診療行為を選択せずに次の【注射薬剤】で薬剤だけを入力しても点滴注射として判断されます。</p>
+                                    <p><strong>点滴注射</strong>による診療行為点数は対象年齢や注射容量によって違うため、これらは概ねレセコン側で自動的に判別されますので手技料は２項あるうちどちらを選択しても<strong>コメント</strong>として入力されます。<strong>点滴注射の場合は</strong>ここで診療行為を選択せずに次の【注射薬剤】で薬剤だけを入力しても点滴注射として判断されます。</p>
                                     <p>点滴注射関連項目から該当する診療行為を選択します。<br>
                                     続けて<strong>T[薬剤] B[注射]</strong>から薬剤を選択します。</p>
                                     <p><img class="" src="images/070_000_sonota2.png" width="355" height="172" alt="その他2"></p>
@@ -566,14 +566,14 @@ $(window).scroll(function () {
                                     <table border="1">
                                         <tr><td>【点滴】<br>
                                         [130005310]関節腔内注射<br>
-                                        [620004685]スベニールディスポ関節注２５ｍｇ　１％２．５ｍＬ[1筒]
+                                        [643140045]ビタＣ注２５％　５００ｍｇ[1管]
                                         </td></tr>
                                     </table>
                                     <p>点滴注射の場合は以下のように入力されます</p>
                                     <table border="1">
                                         <tr><td>【点滴】<br>
                                         /*点滴注射*/（←コメントとして入力される）<br>
-                                        [620006199]イミグランキット皮下注３ｍｇ　０．５ｍＬ[2筒]
+                                        [643140045]ビタＣ注２５％　５００ｍｇ[1管]
                                         </td></tr>
                                     </table>
                                     <p class="padding-bottom30">※入力後に数量などの変更がある場合は直接修正してください。</p>
@@ -595,7 +595,7 @@ $(window).scroll(function () {
                                     診療行為欄には例として以下のように入力されます</p>
                                     <table border="1">
                                         <tr><td>【注射薬剤】<br>
-                                        [640412105]生理食塩液　１００ｍＬ[1 袋]
+                                        [643230298]大塚糖液２０％　２０ｍＬ[1管]
                                         </td></tr>
                                     </table>
 
@@ -616,7 +616,7 @@ $(window).scroll(function () {
                                     </p>
                                     <table border="1">
                                         <tr><td>【処置】<br>
-                                        [140040310]消炎鎮痛等処置（器具等による療法）
+                                        [140000610]創傷処置（１００ｃｍ２未満）
                                         </td></tr>
                                     </table>
                                     <p>酸素吸入などで材料や薬剤等の入力が必要な場合はT[薬剤]またはT[機材]の中から続けて選択し数量を指定します。</p> 
@@ -727,7 +727,8 @@ $(window).scroll(function () {
                                     <p><img class="" src="images/070_000_kensa.png" width="355" height="489" alt="検査"></p>
                                     <p>検査で利用した薬剤を入力する場合は<strong>T[薬剤] B[任意] R[検]</strong>から薬剤を指定すると【検査】以下に選択した薬剤が登録されます。</p>
                                     <p>検査関連項目から該当する診療行為を選択します。<br>
-                                    複数項目がある場合は繰り返し入力します。</p>
+                                    複数項目がある場合は繰り返し入力します。<br>
+                                    診療行為欄には例として以下のように入力されます</p>
                                     <table border="1">
                                         <tr><td>【検査】<br>
                                         [160020010]ＡＬＰ<br>
@@ -741,7 +742,7 @@ $(window).scroll(function () {
                                         </td></tr>
                                     </table>
                                     <p class="padding-bottom30">※検査項目は利用マスタによって呼び名が違う場合があります。<br>
-                                    ※検査による判断料（月１回のみの算定項目）は入力しないでくさい。これらはレセコンが判断します。<br>
+                                    ※検査による判断料（月１回のみの算定項目）は入力しないでください。これらはレセコンが判断します。<br>
                                     ※複数項目による検査はセット登録から選択する事をお勧めします。</p>
                             </div><!--annys-tx-->
                         </div><!--contents_wrapper-->
@@ -766,7 +767,7 @@ $(window).scroll(function () {
                                         </td></tr>
                                     </table>
                                     <p class="padding-bottom30">※検査項目は利用マスタによって呼び名が違う場合があります。<br>
-                                    ※検査による判断料（月１回のみの算定項目）は入力しないでくさい。これらはレセコンが判断します。<br>
+                                    ※検査による判断料（月１回のみの算定項目）は入力しないでください。これらはレセコンが判断します。<br>
                                     ※複数項目による検査はセット登録から選択する事をお勧めします。</p>
                             </div><!--annys-tx-->
                         </div><!--contents_wrapper-->
@@ -780,22 +781,7 @@ $(window).scroll(function () {
                                <div id="annys-tx">
                                     <p><strong>T[行為] B[画像]</strong></p>
                                     <p><img class="" src="images/070_000_gazou.png" width="355" height="489" alt="画像"></p>
-                                    <p>（規則があります）<br>
-                                    =MRI.CT=の場合<br>
-                                    ＜部位＞<br>
-                                    ＜撮影方法＞<br><br>
-
-                                    =XP=の場合<br>
-                                    ＜部位＞<br>
-                                    ＜撮影方法＞*＜撮影枚数＞<br>
-                                    ＜仕様フィルム＞*＜枚数＞<br>
-                                    ＜機材＞or＜フィルム＞(必要な場合<br>
-                                    の順番で入力。<br>
-                                    ※１：ＭＲＩ，ＣＴ２回目以後などの行為はレセコンが判断します。<br>
-                                    ※２：Ｘ－Ｐの写真診断料などはレセコンが判断します。<br>
-                                    ※部位などが無い場合はマスタ設定を確認し事前登録作業を行う必要があります。<br>
-                                    ※３部位コードはORCA側と同じコードを利用するようにしてください。<br>
-                                    ORCAではマスタ登録>点数マスタで部位コードを作成します。</p>
+               
                                     <p>画像関連は部位+撮影方法の組合せで入力する必要があります。診断料や判断料はレセコン側が自動算定を行います。</p>
                                     <ol>
                                         <li>部位を選択します。(002で始まるコード)</li>
@@ -857,7 +843,7 @@ $(window).scroll(function () {
                                <div id="annys-tx">
                                     <p><strong>T[用保]<br>B[定型][補足][数日][他コ]</strong></p>
                                     <p><img class="" src="images/070_000_komento.png" width="355" height="489" alt="コメント"></p>
-                                    <p>診療行為に記録する場合のコメントは#B[定型][補足][数日][他コ]<br>
+                                    <p>診療行為に記録する場合のコメントは<strong>B[定型][補足][数日][他コ]</strong><br>
                                     の種類があります。それぞれの以下の様な意味となります。<br>
                                     <strong>B[定型]</strong>：決まった内容のもの<br>
                                     例：[820000006]健康診断から　[820000014]生活保護受給者　など<br>
@@ -887,7 +873,7 @@ $(window).scroll(function () {
                                     <p>ＯＫ：入力し、次の項目を表示します。<br>
                                     スキップ：表示されている項目は無視し次の項目を表示します。<br>
                                     終了：入力処理を中止します。</p>
-                                    <p class="padding-bottom30">SET登録方法は[診察画面] #T[登録]#T[診療セット登録]に詳細があります。</p>
+                                    <p class="padding-bottom30">SET登録方法は[診察画面] T[登録] T[診療セット登録]に詳細があります。</p>
                             </div><!--annys-tx-->
                         </div><!--contents_wrapper-->
 
@@ -932,12 +918,11 @@ $(window).scroll(function () {
                                <div id="annys-tx">
                                     <p>診察記録が完了し、<strong>B[確]</strong>を押すと、記録データが確定され診療行為内容に応じた適応病名の確認画面が表示されます。</p>
                                     <p><img class="" src="images/070_000_byoumei_kakunin.png" width="362" height="255" alt="病名確認"></p>
-                                    <ul><li>左にある#T[病名]のリストには、適応病名が登録されている診療行為名または薬剤名が表示されています。</li>
+                                    <ul><li>左にある<strong>T[病名]</strong>のリストには、適応病名が登録されている診療行為名または薬剤名が表示されています。</li>
                                     <li>登録済み病名がある場合には青字、そうでない場合は赤字で表示されます。</li>
                                     <li>赤字の部分は▼ーーをクリックすると対応する適応病名が表示され選択できます。<br>
-                                        <img class="" src="images/070_000_byoumei_kakunin2.png" width="358" height="261" alt="病名確認2"></li>
-                                    <li>病名を選択したら右側の#B(+)を押すと、病名が登録され診療行為名が青字に変わります。<br>
-                                        <img class="" src="images/070_000_byoumei_kakunin3.png" width="358" height="261" alt="病名確認3"><br>
+                                    <li>病名を選択したら右側の<strong>B(+)</strong>を押すと、病名が登録され診療行為名が青字に変わります。<br>
+                                        <img class="" src="images/070_000_byoumei_kakunin2.png" width="358" height="261" alt="病名確認3"><br>
                                         ※登録後の病名開始日などは適宜修正してください。
                                     </li></ul>
                                     <p class="padding-bottom30">※<strong>B[確]</strong>を押すと、一時的なデータ保護が行わます。これは診療記録全般を別フィールドにコピーしている単純なものですがキーボードの操作ミスなどで記録内容が消された場合など一時的なデータ復帰が行えます。<strong>S[診療行為]>S[一時データからの復帰]</strong>></p>
@@ -952,7 +937,7 @@ $(window).scroll(function () {
                         <!--本文-->
                                <div id="annys-tx">
                                     <p><img class="" src="images/070_000_byoumei_sakuin.png" width="364" height="489" alt="病名索引"></p>
-                                    <p>病名のみを索引したいときは#T[病名]#T[病名索引]で行えます。<br>
+                                    <p>病名のみを索引したいときはT[病名] T[病名索引]で行えます。<br>
                                     入力欄には全角カナを入力するようにしてください。<br>
                                     ※英字・数字も全角です。<br>
                                     ２文字以上の入力で該当する項目を索引できます。</p>
@@ -975,7 +960,7 @@ $(window).scroll(function () {
                                     <li>送信が正常に行われたことを示す「登録処理終了」メッセージが画面左上に表示されます。何らかのエラーが発生した場合もここにその旨が表示されます。</li>
                                     <li>診療行為欄下にORCAから戻された<strong>管理番号(UUID)</strong>が表示されます。（このUUIDは削除依頼するときに必要です。）</li>
                                     <li>診療行為内容全体が青文字で表示されます。</li></ul>
-                                    <p class="padding-bottom30">※もしなんらかのエラーが発生しうまく送信できない場合はいったん[受付画面]に戻り、再度#B[診察]でこの画面に戻ってから<strong>B[終]</strong>を押してみてください。診察画面を開いた時、患者情報欄に保険情報が表示されているか確認してください。ここに表示されている保険情報はORCAから取得しているものです。</p>
+                                    <p class="padding-bottom30">※もしなんらかのエラーが発生しうまく送信できない場合はいったん[受付画面]に戻り、再度 B[診察]でこの画面に戻ってから<strong>B[終]</strong>を押してみてください。診察画面を開いた時、患者情報欄に保険情報が表示されているか確認してください。ここに表示されている保険情報はORCAから取得しているものです。</p>
                             </div><!--annys-tx-->
                         </div><!--contents_wrapper-->
 
@@ -1001,7 +986,6 @@ $(window).scroll(function () {
                                     </ul>
                                     <p>正しく送信が行われた場合受付リストには"会計待ち"と表示されます。</p>
                                     <p><img class="" src="images/070_000_shusei4.png" width="410" height="140" alt="修正4"></p>
-                                    <p><img class="" src="images/070_000_shusei5.png" width="410" height="140" alt="修正5"></p>
                                     <p class="padding-bottom30">※会計待ちレコードはORCAなどで会計が終了した場合。<strong>「会計済み」</strong>となります。（<strong>B[本日]</strong>を押したときに日レセよりデータを取得します。）<br>
                                         その他ORCAとの連携についての詳細は「日レセ連携」を参照してください。</p>
                             </div><!--annys-tx-->
@@ -1014,9 +998,9 @@ $(window).scroll(function () {
                             </div>
                         <!--本文-->
                                <div id="annys-tx">
-                                <p>ANNYS_D版の診療記録部分は、ほとんどがテキスト入力による簡単な方法ではありますが。しかしながら、これらテキスト入力部分の編集権限を持つユーザーが、過去データを見返したりしている最中に「うっかりデータを消してしまった！」なんて事も想定されます。</p>
+                                <p>ANNYS_D版の診療記録部分は、ほとんどがテキスト入力による簡単な方法ではあります。しかしながら、これらテキスト入力部分の編集権限を持つユーザーが、過去データを見返したりしている最中に「うっかりデータを消してしまった！」なんて事も想定されます。</p>
                                 <p>そんな時ANNYYSでは「一時データからの復帰」という処理を用意していますので次の事を覚えていれば慌ててずにトラブル対処ができます。</p>
-                                <p>※「一時データの復帰」が機能するのなマニュアルの冒頭にもあったB[確]を押して確定処理された記録だけですのでご注意ください。「確定」処理された記録かどうかは診察画面のB[確]ボタンの色で判別できます。</p>
+                                <p>※「一時データの復帰」が機能するのはマニュアルの冒頭にもあったB[確]を押して確定処理された記録だけですのでご注意ください。「確定」処理された記録かどうかは診察画面のB[確]ボタンの色で判別できます。</p>
                                 <p><img class="" src="images/070_000_trouble.png" width="604" height="144" alt="トラブル"></p>
 
                                 <h4 id="zf1">その１</h4>
