--- a/public_html/[090_000]master.html
+++ b/public_html/[090_000]master.html
@@ -256,7 +256,7 @@ $(window).scroll(function () {
                                 ボタン：B[内服] B[外用] B[注射] B[生薬] B[造影] B[検索]</p>
                                 <p>【薬剤・生薬の採用登録】</p>
                                 <ul>
-                                    <li>コード番号をクリックして青字にする事で L[診察画面] T[薬剤]リスト内に表示され選択できるようになります。</li>
+                                    <li>コード番号をクリックして青字にする事で <strong>L[診察画面] T[薬剤]</strong>リスト内に表示され選択できるようになります。</li>
                                     <li>青字をさらにクリックするとリスト対象から外れます。</li>
                                 </ul>
 
