--- a/public_html/[110_000]renkei.html
+++ b/public_html/[110_000]renkei.html
@@ -397,8 +397,9 @@ $(window).scroll(function () {
                 <!--本文-->
                 <div id="annys-tx">
                     <p>ANNYYS_Dでは基本設定に設定した処方（院内or院外）内容で日レセに情報が送信されます。たまに設定と違う方法で処方を処理したい場合はORCA側で処方内容を修正してください。</p>
-                    <p>例）院外処方を院内処方に変更する場合</p>
                     <p><img class="center-block" src="images/110_000_shohouhenkou.png" alt="処方変更"></p>
+                    <p>例）院外処方を院内処方に変更する場合</p>
+                    <p><img class="center-block" src="images/110_000_shohouhenkou0.png" alt="処方変更0"></p>
                     <p>基本設定が院外なので全て院外処方で受信されています。</p>
                     <p><img class="center-block" src="images/110_000_shohouhenkou1.png" alt="処方変更1"></p>
                     <p class="padding-bottom10">院外を院内に変えるには処方の２１２の部分を２１１に変更します。これで院外処方が院内処方に変更できます。
