--- a/public_html/[110_000]renkei.html
+++ b/public_html/[110_000]renkei.html
@@ -419,10 +419,9 @@ $(window).scroll(function () {
                 <!--本文-->
                 <div id="annys-tx">
                     <p>ANNYYS_Dで登録した予約情報も日レセに送信されます。
-                        L[外来受付]#B[予約]で予約内容を登録します。</p>
+                        L[外来受付] B[予約]で予約内容を登録します。ポップアップに日時・時間、診療科、などをを入力します。</p>
                     <p><img class="center-block" src="images/110_000_yoyaku.png" alt="予約"></p>
-                    <p>予約処理内容に日時・時間を入力します。</p>
-                    <p><img class="center-block" src="images/110_000_yoyaku1.png" alt="予約1"></p>
+                    <p>予約完了のメッセージが表示されますので「OK」を押します。</p>
                     <p><img class="center-block" src="images/110_000_yoyaku2.png" alt="予約2"></p>
                     <p>送信された旨のメッセージが表示されますので「OK」を押します。</p>
                     <p><img class="center-block" src="images/110_000_yoyaku3.png" alt="予約3"></p>
